# toolbox

./: .bashrc  .gitconfig  .tmux.conf  Makefile  data.txt  make.sh  setup-symlinks.sh
.bashrc.d/: ansi.sh  common.sh  prompt.sh  set_prompt
.kiro/steering/: coding-standards.md
Exercises/Functional-Programming-in-Scala/: pom.xml
Exercises/Learning-Concurrent-Programming-in-Scala/: pom.xml
Exercises/Project-Euler/: pom.xml
build-pi/: 1-install-packages.sh  1-prepare-sd-card.txt  2-start.txt  3-install-packages.sh  4-configure-powerdns.txt
etc/: .bash_profile  .bashrc  .bashrc.cygwin  .inputrc  .minttyrc  .tmux.conf
etc/.bashrc.d/: ansi.sh  common.sh  prompt.sh  set_ansi
git/: .git-include  .gitconfig-global  list-aliases.py
git/aliases/: aliases.py  compare-local-vs-remotes.sh  recipes.sh  stash-show-all.sh  status-all.sh  status1.sh
python/: print-space.py  startup.py  superhubcli.py  test-doctest.py  test-superhub.py  test-superhubcli-mac.py  test-tailrec.py
python/experiments/: .gitignore  cbclick.py  cbjira.py  cbjiracli.py  common.py  support.py  support.txt  (+15 more)
scripts/: backup-tool.py  clean.sh  csvtranspose.py  git-tool.py  mount-shared-perm.sh  mount-shared-temp.sh  qrcode-tool.py  qrscan.sh  scanto.sh  scantopdf.sh  ssh-tool.py  ssh-tool.yaml  start-todo-terminal.sh  task-loop.sh  task-todo.sh  task-tool.sh  zip-safe.sh
task-tool/: README.md  pyproject.toml  task-tool-build-prompt.md
task-tool/src/task_tool/: __init__.py  backup.py  cli.py  config.py  crypto.py  merge.py  s3.py  snapshot.py  state.py  taskdata.py
tests/: test_ssh_tool.py
(+56 files in other folders)
